Bug 1426801 - Clear gFirstIdleTask if we fail to dispatch the runnable. r=mrbkap, a=gchang

MozReview-Commit-ID: 23f9VDTyyqg